--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,3 +41,40 @@ android {
     abortOnError false
   }
 }
+
+dependencies {
+    // Credentials library
+    implementation("androidx.credentials:credentials:1.5.0")
+
+    // Google Identity library
+    implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.1'
+
+    // Play Services Auth support for Android 13 and below
+    implementation("androidx.credentials:credentials-play-services-auth:1.5.0")
+
+    // Google Play Services Auth
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
+    
+    // Google Play Services Base (for availability check)
+    implementation("com.google.android.gms:play-services-base:18.3.0")
+
+    // Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
+
+    // Google API Client for token verification (EXCLUDING CONFLICTING MODULES)
+    implementation("com.google.api-client:google-api-client:2.2.0") {
+        exclude group: "org.apache.httpcomponents", module: "httpclient"
+        exclude group: "org.apache.httpcomponents", module: "httpcore"
+    }
+
+    implementation("com.google.http-client:google-http-client-gson:1.42.3") {
+        exclude group: "org.apache.httpcomponents", module: "httpclient"
+        exclude group: "org.apache.httpcomponents", module: "httpcore"
+    }
+
+    implementation("com.google.oauth-client:google-oauth-client-jetty:1.34.1") {
+        exclude group: "org.apache.httpcomponents", module: "httpclient"
+        exclude group: "org.apache.httpcomponents", module: "httpcore"
+    }
+}
