--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     </intent>
   </queries>
   <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="true" android:theme="@style/AppTheme" android:supportsRtl="true">
+    <meta-data android:name="com.google.android.gms.games.ANDROID_CLIENT_ID" android:value="323401839237-ot59qpfe56lgl1k6thn1capfm1706fv9.apps.googleusercontent.com"/>
+    <meta-data android:name="com.google.android.gms.games.WEB_CLIENT_ID" android:value="323401839237-p490vkqmlcapjajh1f21gfha09p9oi0r.apps.googleusercontent.com"/>
     <meta-data android:name="expo.modules.updates.ENABLED" android:value="false"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH" android:value="ALWAYS"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS" android:value="0"/>
