--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "essential-google-signin",
   "version": "0.1.0",
-  "description": "Allow google signing with Credential Manager",
+  "description": "Native Google Sign-In for Expo using Android Credential Manager and iOS GoogleSignIn SDK",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
@@ -18,6 +18,10 @@
   "keywords": [
     "react-native",
     "expo",
+    "google-signin",
+    "credential-manager",
+    "authentication",
+    "oauth",
     "essential-google-signin",
     "EssentialGoogleSignin"
   ],
@@ -38,6 +42,7 @@
   "peerDependencies": {
     "expo": "*",
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "@expo/config-plugins": ">=8.0.0"
   }
 }
