Update to ios 15 and android 35

--- a/example/ios/essentialgooglesigninexample/Info.plist
+++ b/example/ios/essentialgooglesigninexample/Info.plist
@@ -27,6 +27,12 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
+          <string>com.jossendal.essentialgooglesignin.example</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
           <string>com.googleusercontent.apps.323401839237-l8mk1k20kcre5pv1spt0jmsi9706e1hf</string>
         </array>
       </dict>
@@ -60,6 +66,8 @@
     <array>
       <string>UIInterfaceOrientationPortrait</string>
       <string>UIInterfaceOrientationPortraitUpsideDown</string>
+      <string>UIInterfaceOrientationLandscapeLeft</string>
+      <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
     <key>UISupportedInterfaceOrientations~ipad</key>
     <array>
